fix: target보다 source의 rank가 클 때 역순으로 리스트 생성